web/src/style.less
@import "uikit/src/less/uikit.theme.less";

@internal-form-checkbox-image: "uikit/src/images/backgrounds/form-checkbox.svg";
@internal-divider-icon-image: "uikit/src/images/backgrounds/divider-icon.svg";

.uk-margin button + button {
  margin-left: 5px;
}

.field-error-message {
  color: #f0506e;
  font-size: 0.875rem;
}

